# sage_backend

./: .gitignore  .pdm-python  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
jobs/: ocr.py  tests.py  urls.py
jobs/barcode/: barcode_handler.py  job.py
scripts/: generate_github_key.sh  post_attach_script.sh  post_create_script.sh
